# murmur

./: README.md  package-lock.json  package.json  vite.config.ts
scripts/: compile-icons.js
src/: App.tsx  Editor.tsx  Segment.tsx  Uploader.tsx  global.d.ts  icons.ts  main.tsx
src-tauri/: .gitignore  Cargo.toml  sqlx-data.json  tauri.conf.json
src-tauri/bindings/: EditorData.ts  File.ts  FileId.ts  FileJob.ts  JobId.ts  JobStatus.ts  Language.ts  Segment.ts  Speaker.ts  SpeakerSpan.ts  TranslationQuality.ts
src-tauri/migrations/: 20230212135921_initial.sql
src-tauri/scripts/: create_db.sh  refresh_sqlx.sh
src-tauri/src/: cli_args.rs  error.rs  language.rs  main.rs  process_file.rs  srt.rs  whisper.rs
src-tauri/src/audio_format/: mod.rs  wav.rs
src-tauri/src/commands/: constants.rs  mod.rs  translate.rs
src-tauri/src/model/: editor_data.rs  file.rs  job.rs  mod.rs  segment.rs  speaker.rs  translation_quality.rs
src-tauri/src/model/requests/: edit_segment.rs  mod.rs  upload_file.rs
src-tauri/src/services/: database.rs  mod.rs  worker.rs
src/components/: AudioFile.tsx  Button.tsx  DropDown.tsx  JobProgress.tsx  SegmentBlock.tsx  Uploader.tsx
src/components/editor/: Controls.tsx  SegmentBlock.tsx  SpeakerBlock.tsx  Speakers.tsx
src/components/icons/: AddCircleIcon.tsx  AddIcon.tsx  AddSquareIcon.tsx  AirplaneIcon.tsx  AnnouncementIcon.tsx  ApplicationIcon.tsx  ArchiveIcon.tsx  AtIcon.tsx  (+192 more)
src/model/: SpeakersWithSegments.ts  bindings
src/state/: config.ts  files.ts
src/utils/: editStack.ts  saveTranscript.ts
src/views/: Editor.tsx  Menu.tsx
(+3 files in other folders)
