[package]
name = "murmur"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.1", features = [] }

[dependencies]
rubato = "0.12.0"
clap = {version = "4.1.4",  features = ["derive"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.1", features = ["api-all"] }
tempdir = "0.3.7"
uuid = { version = "1.1.2", features = ["v4", "serde"] }
glob = "0.3.0"
chrono = { version = "0.4.19", features = ["serde"] }
nom = "7.1.1"
anyhow = "1.0.65"
thiserror = "1.0.37"
whisper-rs = "0.5.0"
num_cpus = "1.15.0"
hound = "3.5.0"
tokio = { version = "1.25.0", features = ["full"] }
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "sqlite", "uuid", "offline", "chrono"] }
ts-rs = { version = "6.2" }
base64 = "0.21.0"
symphonia = "0.5.2"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
